Fix China CDN issue and launcher scrolling out of view issue

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -2332,7 +2332,7 @@ display: none;
 
 .mck-sidebox-launcher {
 	white-space: pre;
-	position: fixed;
+	position: absolute;
 	z-index: 2243000;
 	bottom: 45px;
 	right: 35px;
